--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <table cellspacing="20">
         <tr>
             <td>
-                <img src="/My Website-HTML/icon-modified.png" alt="Icon Image" height="240" width="240">
+                <img src="icon-modified.png" alt="Icon Image" height="240" width="240">
             </td>
             <td>
                 <h1>Kai Developer</h1>
