--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
 <body>
     <h3>Contact me</h3>
     <p>Phone no: 123456789</p>
-    <p></p><a href="https://www.instagram.com/"><img src="/My Website-HTML/instalogo.png" alt="Instagram logo" height="50" width="50"></a></p>
+    <p></p><a href="https://www.instagram.com/"><img src="instalogo.png" alt="Instagram logo" height="50" width="50"></a></p>
     <p>Playing Video Games</p>
     <form action="index.html">
         <label>Your Name: </label>
