--- a/contact.html
+++ b/contact.html
@@ -2,8 +2,6 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Me</title>
 </head>
 <body>
@@ -11,14 +9,14 @@
     <p>Phone no: 123456789</p>
     <p></p><a href="https://www.instagram.com/"><img src="instalogo.png" alt="Instagram logo" height="50" width="50"></a></p>
     <p>Playing Video Games</p>
-    <form action="index.html">
-        <label>Your Name: </label>
-        <input type="text">
+    <form action="index.html" enctype="text/plain">
+        <label>Your Name:</label>
+        <input type="text" name="yourName">
         <br>
-        <label>Your Email: </label>
-        <input type="email"><br>
+        <label>Your Email:</label>
+        <input type="email" name="yourGmail"><br>
         <label>Your Message</label><br>
-        <textarea name="name" rows="10" cols="40"></textarea><br>
+        <textarea name="yourMessage" rows="10" cols="40"></textarea><br>
         <input type="submit">
     </form>
 </body>
